[package]
name = "rustitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.29.1" }
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"] }

ehttp = { version = "0.5.0", features = [] }
image = { version = "0.25.4", features = ["png"] }
rustc-hash = "2.0.0"
rustitude_base = { version = "0.1.0", path = "crates/base" }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }

[workspace]
members = ["crates/base", "crates/emap"]
