[package]
name = "rustitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustitude_base.workspace = true
eframe.workspace = true
egui.workspace = true
ehttp.workspace = true
emap.workspace = true
emap_loaders.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
egui_extras.workspace = true
image.workspace = true


[workspace]
members = ["crates/base", "crates/emap", "crates/emap_loaders"]

[workspace.dependencies]
eframe = { version = "0.30.0" }
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
ehttp = { version = "0.5.0", features = [] }
image = { version = "0.25.4", features = ["png"] }
rustc-hash = "2.1.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
rustitude_base = { version = "0.1.0", path = "crates/base" }
emap = { version = "0.1.0", path = "crates/emap" }
emap_loaders = { version = "0.1.0", path = "crates/emap_loaders" }
