[package]
name = "emap_loaders"
version = "0.1.0"
edition = "2021"
[lib]

[dependencies]
egui.workspace = true
ehttp.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
emap.workspace = true
rustitude_base.workspace = true
rustitude_mvt = { workspace = true, optional = true }

[features]
default = ["png"]
png = []
mvt = ["rustitude_mvt"]
